--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,3 +1,34 @@
-<ul class="range">
-    <a href="/">{{title}}</a>
-</ul>
+<nav>
+    <ul class="menu">
+        <li class="NavBtn"><a href="">Главная</a></li>
+        <li class="NavBtn"><a href="">Новинки</a></li>
+        <li class="NavBtn"><a href="">Манга</a></li>
+        <li class="NavBtn"><a href="index2.html">Фигурки</a></li>
+    </ul>
+    <ul class="icons">
+        <li><img class="sc" src="images/shopping-cart (1).png" alt="shopping-cart"></li>
+        <li class="total"></li>
+    </ul>
+</nav>
+<h1 class="title">Успей купить!</h1>
+<div class="cards">
+    {{#each product}}
+    <div class="card">
+        <a href="pages/page1.html"><img class="product" src="/images/manga/1026883189.jpg" alt="{{title}}"></a>
+        <div class="caption">
+            <h4><a href="pages/page1.html">{{title}}</a></h4>
+            <p>
+                Автор: {{autor}}<br>
+                Статус: <span class="entered">{{status}}</span> {{date}}г.<br>
+                Жанры: {{genres}}
+            </p>
+        </div>
+        <div class="price">
+            <h3>{{price}}</h3>
+        </div>
+        <div class="pokupka">
+            <button class="buy">Купить!</button>
+        </div>
+    </div>
+    {{/each}}
+</div>
