--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -11,7 +11,18 @@
 
 <body>
     <script src="#"></script>
-
+    <nav>
+        <ul class="menu">
+            <li class="NavBtn"><a href="/">Главная</a></li>
+            <li class="NavBtn"><a href="">Новинки</a></li>
+            <li class="NavBtn"><a href="">Манга</a></li>
+            <li class="NavBtn"><a href="index2.html">Фигурки</a></li>
+        </ul>
+        <ul class="icons">
+            <li><img class="sc" src="images/shopping-cart (1).png" alt="shopping-cart"></li>
+            <li class="total"></li>
+        </ul>
+    </nav>
     {{{body}}}
     <script src="script.js"></script>
 </body>
