--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,25 +1,13 @@
-<nav>
-    <ul class="menu">
-        <li class="NavBtn"><a href="">Главная</a></li>
-        <li class="NavBtn"><a href="">Новинки</a></li>
-        <li class="NavBtn"><a href="">Манга</a></li>
-        <li class="NavBtn"><a href="index2.html">Фигурки</a></li>
-    </ul>
-    <ul class="icons">
-        <li><img class="sc" src="images/shopping-cart (1).png" alt="shopping-cart"></li>
-        <li class="total"></li>
-    </ul>
-</nav>
 <h1 class="title">Успей купить!</h1>
 <div class="cards">
     {{#each product}}
     <div class="card">
-        <a href="pages/page1.html"><img class="product" src="/images/manga/1026883189.jpg" alt="{{title}}"></a>
+        <a href="/product/{{_id}}"><img class="product" src="/images/{{img}}" alt="{{title}}"></a>
         <div class="caption">
-            <h4><a href="pages/page1.html">{{title}}</a></h4>
+            <h4><a href="/product/{{_id}}">{{title}}</a></h4>
             <p>
                 Автор: {{autor}}<br>
-                Статус: <span class="entered">{{status}}</span> {{date}}г.<br>
+                Статус: <span class="{{status__class}}">{{status}}</span> {{date}}г.<br>
                 Жанры: {{genres}}
             </p>
         </div>
@@ -27,7 +15,7 @@
             <h3>{{price}}</h3>
         </div>
         <div class="pokupka">
-            <button class="buy">Купить!</button>
+            <button href="/product/{{_id}}" class="buy">Купить!</button>
         </div>
     </div>
     {{/each}}
