--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
-
 body {
     margin: 0;
     padding: 0;
     background-image: url(images/mainbg2.png);
     font-family: Ubuntu, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 nav {
     width: 100%;
@@ -26,7 +29,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    width: 50px;
+    width: 200px;
     margin: 0;
 }
 li {
@@ -86,7 +89,7 @@ a:hover {
     background-size: 100% 2px;
 }
 h3:after {
-    content: "₽";
+    content: " ₽";
 }
 
 .total {
@@ -102,7 +105,6 @@ h3:after {
 }
 .new{
     position: relative;
-    /*bottom: 688px;*/
     bottom: 102%;
     left: -87.4px;
     height: 80px;
@@ -119,17 +121,6 @@ h3:after {
     justify-content: space-around;
     flex-wrap: wrap;
 }
-@keyframes animateColor {
-    0% {
-        filter: hue-rotate(0deg);
-    }
-    50%{
-        filter: hue-rotate(180deg);
-    }
-    100% {
-        filter: hue-rotate(360deg);
-      }
-  }
 
 .card {
     text-align: center;
@@ -140,12 +131,13 @@ h3:after {
     width: 300px;
     height: 650px;
 	transition: all 0.2s linear 0s;
+    position: relative;
 }
 img{
     border-radius: 0.2rem;
 }
 *{
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 .caption {
     display: inline-block;
@@ -159,15 +151,18 @@ img{
     box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.4);
     transform: scale(1.1);
     transition: all 0.2s ease-in 0s;
-    transition-duration: 400ms;
-    transition-delay: 70ms;
+    transition-duration: 230ms;
+    transition-delay: 40ms;
 }
 .pokupka {
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    margin-top: 10px;
+    /*height: 10%;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: flex-end;*/
+    /*margin-top: 10px;*/
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
 }
 .price {
     display: flex   ;
@@ -251,48 +246,8 @@ footer {
         padding: 0;
     }
 }
-#preloader_malc {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 99;
 
-}
-#preloader_malc div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(images/mainbg2.png);
-    width: 100%;
-    height: 100%;
-    color: whitesmoke;
-    font-size: 30px;
-    text-align: center;
-}
-.type {
-    color: #fff;
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid tomato; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-    animation:
-            typing 1.5s steps(30, end),
-            blink-caret .5s step-end infinite;
-}
 
-/* The typing effect */
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: tomato }}
 .content{
     display: flex;
     flex-wrap: nowrap;
@@ -351,3 +306,26 @@ footer {
 h1{margin: 0; padding: 0;}
 h2{margin: 0; padding: 0;}
 
+.error{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    background: rgba(245, 245, 245, 0.774);
+}
+.auth{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 5%;
+    padding: 20px;
+    border-radius: 0.2rem;
+    background: rgba(245, 245, 245, 0.774);
+}
+.auth label{
+    padding-top: 5px;
+}
+.auth input:last-child{
+    margin-top: 5px;
+}
