--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +23,7 @@
         </ul>
     </nav>
     {{{body}}}
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
