футер и немного стилей

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -23,6 +23,10 @@
         </ul>
     </nav>
     {{{body}}}
+    <footer>
+        <strong>©2021 Проект студентов 1Р3.20 ITHUB college Колякина Никиты и Акылверен Тимофей<br>
+            Все изображения и информация взяты из сети Internet.</strong>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
