--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 body {
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     background-image: url(images/mainbg2.png);
     font-family: Ubuntu, sans-serif;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
 }
 nav {
@@ -221,9 +222,7 @@ img{
 }
 footer {
     background: rgba(245, 245, 245, 0.774);
-    margin: 0 10% 0 10%;
-    width: 80%;
-    border-radius: 0.2rem;
+    width: 100%;
     text-align: center;
     box-shadow: 5px 8px 10px 10px rgba(0, 0, 0, 0.4);
 }
@@ -246,8 +245,6 @@ footer {
         padding: 0;
     }
 }
-
-
 .content{
     display: flex;
     flex-wrap: nowrap;
@@ -307,6 +304,7 @@ h1{margin: 0; padding: 0;}
 h2{margin: 0; padding: 0;}
 
 .error{
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
