--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <script src="#"></script>
     <nav>
         <ul class="menu">
             <li class="NavBtn"><a href="/">Главная</a></li>
@@ -19,20 +18,16 @@
             <li class="NavBtn"><a href="index2.html">Фигурки</a></li>
         </ul>
         <ul class="icons">
-            <li><img class="sc" src="images/shopping-cart (1).png" alt="shopping-cart"></li>
+            <li><img class="sc" src="./images/shopping-cart (1).png" alt="shopping-cart"></li>
             <li class="total"></li>
         </ul>
     </nav>
     {{{body}}}
-<<<<<<< HEAD
-    <script src="/script.js"></script>
-=======
     <footer>
         <strong>©2021 Проект студентов 1Р3.20 ITHUB college Колякина Никиты и Акылверен Тимофей<br>
             Все изображения и информация взяты из сети Internet.</strong>
     </footer>
-    <script src="./script.js"></script>
->>>>>>> 41b06ab7d2e56265c563dd9246fd873c09cd8e94
+    <script src="/script.js"></script>
 </body>
 
 </html>
