стили продукта но не даделав

--- a/server/views/product.hbs
+++ b/server/views/product.hbs
@@ -1,1 +1,11 @@
-{{title}}
+<div class="content">
+    <div class="item">
+    <img src="/images/{{img}}" alt="{{title}}">
+    <h2>{{title}}</h2>
+    </div>
+    <div class="description">
+        <p>{{autor}}</p>
+        <p>{{date}}</p>
+        <p>{{genres}}</p>
+    </div>
+</div>    
