--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -14,7 +14,7 @@
             <h3>{{price}}</h3>
         </div>
         <div class="pokupka">
-            <button href="/product/{{_id}}" class="buy">Купить!</button>
+            <button class="{{_id}} buy">Купить!</button>
         </div>
     </div>
     {{/each}}
