--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="/style.css">
     <title>{{title}}</title>
 </head>
+<div class="basket__container">
+    <div class="Cart-Container">
+        <div class="Header_carr">
+            <h3 class="Heading">Ваша корзина</h3>
+            <div class="btn">
+                <h5 class="Action">
+                    <button class="header__btn">Закрыть</button>
+                </h5>
+            </div>
+        </div>
+        <div class="card__main__Container"></div>
+        <hr>
+        <div class="checkout">
+            <div class="total">
+                <div class="div">
+                    <div class="Subtotal"> Всего</div>
+                    <div class="itemm"> 0 товаров</div>
+                    <div class="total-amount"> 0₽</div>
+                </div>
+                <div class="inp__forms">
+                    <input type="tel" placeholder="Телефон" required />
+                    <input type="text" placeholder="Адрес" required />
+                    <input type="email" placeholder="Электронная почта" required />
+                    <button type="submit">Оформить заказ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <body>
     <nav>
