--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>{{title}}</title>
 </head>
+<script src="#"></script>
 <div class="basket__container">
     <div class="Cart-Container">
         <div class="Header_cart">
@@ -33,6 +34,7 @@
                     <input type="text" placeholder="Адрес" required />
                     <input type="email" placeholder="Электронная почта" required />
                     <button type="submit">Оформить заказ</button>
+                    <button class="clean">Очистить корзину</button>
                 </div>
             </div>
         </div>
