--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -1,44 +1,44 @@
 {{#if admin}}
-    <div class="auth">
-        <h1>Админка</h1>
-<form action="/admin" method="POST" enctype="multipart/form-data" style="display: flex; flex-direction: column;">
-    <label>Название:</label>
-    <input required placeholder="Атака Титанов" type="text" name="title" size="50">
-    <label>Автор:</label>
-    <input required type="text" placeholder="Хаяо Миадзаки" name="autor" size="50">
-    <label>Дата выпуска (год):</label>
-    <input required type="number" placeholder="2007" name="date" size="50">
-    <label>Цена:</label>
-    <input required type="number" placeholder="200" name="price" size="50">
-    <label>Статус:</label>
-    <select required name="status">
-        <option value="Издано">Издано</option>
-        <option value="Выходит">Выходит</option>
-    </select>
-    <label>Статус (Класс):</label>
-    <select required name="status__class">
-        <option value="entered">entered</option>
-        <option value="enter">enter</option>
-    </select>
-    <lable>Описание: </lable>
-    <textarea cols="10" rows="10" placeholder="Любая прикольная история)" required name="disription"></textarea>
-    <label>Жанры (запись через запятую):</label>
-    <input type="text" placeholder="Исекай, трапы" name="genres" size="50">
-    <label>Картинка:</label>
-    <input required type="file" name="img">
-    <input required type="submit" value="Добавить продукт">
-</form>
-    </div>
+<div class="auth">
+    <h1>Админка</h1>
+    <form action="/admin" method="POST" enctype="multipart/form-data" style="display: flex; flex-direction: column;">
+        <label>Название:</label>
+        <input required placeholder="Атака Титанов" type="text" name="title" size="50">
+        <label>Автор:</label>
+        <input required type="text" placeholder="Хаяо Миадзаки" name="autor" size="50">
+        <label>Дата выпуска (год):</label>
+        <input required type="number" placeholder="2007" name="date" size="50">
+        <label>Цена:</label>
+        <input required type="number" placeholder="200" name="price" size="50">
+        <label>Статус:</label>
+        <select required name="status">
+            <option value="Издано">Издано</option>
+            <option value="Выходит">Выходит</option>
+        </select>
+        <label>Статус (Класс):</label>
+        <select required name="status__class">
+            <option value="entered">entered</option>
+            <option value="enter">enter</option>
+        </select>
+        <lable>Описание: </lable>
+        <textarea cols="10" rows="10" placeholder="Любая прикольная история)" required name="description"></textarea>
+        <label>Жанры (запись через запятую):</label>
+        <input type="text" placeholder="Исекай, трапы" name="genres" size="50">
+        <label>Картинка:</label>
+        <input required type="file" name="img">
+        <input required type="submit" value="Добавить продукт">
+    </form>
+</div>
 {{else}}
 
-    <div class="auth">
-<form action="/login" method="GET" class="login">
-    <h1>Авторизация</h1>
-    <lable>email:</lable>
-    <input type="email" name="email" class="login__email">
-    <lable>password:</lable>
-    <input type="password" name="password" class="login__password">
-    <input type="submit" value="Отправить">
-</form>
-{{/if}}
+<div class="auth">
+    <form action="/login" method="GET" class="login">
+        <h1>Авторизация</h1>
+        <lable>email:</lable>
+        <input type="email" name="email" class="login__email">
+        <lable>password:</lable>
+        <input type="password" name="password" class="login__password">
+        <input type="submit" value="Отправить">
+    </form>
+    {{/if}}
 </div>
