--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -12,7 +12,7 @@
         </div>
         <div class="pokupka">
             <h3>{{price}}</h3>
-            <button class="{{_id}} buy">Купить!</button>
+            <button class="{{_id}} yey buy">Купить!</button>
         </div>
     </div>
     {{/each}}
