--- a/server/views/product.hbs
+++ b/server/views/product.hbs
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="item">
-    <img src="/images/{{img}}" alt="{{title}}">
-    <h2>{{title}}</h2>
+        <img src="/images/{{img}}" alt="{{title}}">
+        <h2>{{title}}</h2>
     </div>
     <div class="description">
         <h4>Характеристики: </h4>
@@ -9,7 +9,7 @@
         <p>Год выпуска: {{date}}</p>
         <p>Жанры: {{genres}}</p>
         <h4>Описание:</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aperiam aut consequuntur distinctio ea earum enim et, eveniet fugit impedit iusto labore minima modi nostrum numquam officia omnis provident quisquam ratione recusandae rem, sit sunt tenetur unde veniam voluptas voluptatem? Accusamus architecto, cupiditate delectus doloremque eligendi eos fuga in ipsa maxime, officiis perspiciatis quo sit vero! Doloremque fugit, numquam.</p>
-        <button class="buy__product">Добавить в корзину</button>
+        <p>{{description}}</p>
+        <button class="{{_id}} yey buy__product">Добавить в корзину</button>
     </div>
 </div>
