Вернур 404 и немного стилей на корзину

--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                 </h5>
             </div>
         </div>
-        <div class="card__main__Container"></div>
+        <div class="card__main__Container"><div class="empty">Корзина пуста(</div></div>
         <hr>
         <div class="checkout">
             <div class="total">
@@ -34,7 +34,7 @@
                     <input type="text" placeholder="Адрес" required />
                     <input type="email" placeholder="Электронная почта" required />
                     <button type="submit">Оформить заказ</button>
-                    <button class="clean">Очистить корзину</button>
+                    <img class="clean" src="https://img.icons8.com/ios-glyphs/30/000000/trash--v1.png"/>
                 </div>
             </div>
         </div>
