--- a/public/style.css
+++ b/public/style.css
@@ -163,7 +163,6 @@ img{
 .price {
     display: flex   ;
     justify-content: center;
-    /* width: 350px; */
 }
 
 .buy {
@@ -238,7 +237,7 @@ footer {
     width: 400px;
     background: rgb(196,196,196);
     border-radius: 0.2rem;
-    margin: 90px 0 50px 0;
+    margin: 50px 0 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -250,7 +249,7 @@ footer {
 }
 
 .description{
-    margin: 90px 0 50px 0 ;
+    margin: 50px 0 0 0 ;
     height: 55vh;
     width: 45vw;
     background: rgba(245,245,245, 0.8);
@@ -262,10 +261,33 @@ footer {
 .description p {
     margin: 0;
 }
+.description__content{
+    font-size: 10px;
+}
+.item h3{
+    margin: 5px;
+}
+.item h3:after{
+    content: " ₽";
+}
 .btns{
     position: absolute;
     left: 590px;
     bottom: 175px;
+}
+.empty{
+    position: absolute;
+    top: 30vh;
+    left: 35vw;
+    text-align: center;
+}
+.clean{
+    position: absolute;
+    top: 5px;
+    right: 50px;
+    font-size: 30px;
+    width: 35px;
+    filter: grayscale(100%);
 }
 .main__btns{
     height: 65px;
@@ -302,7 +324,7 @@ h2{margin: 0; padding: 0;}
     justify-content: center;
     flex-direction: column;
     margin: 5%;
-    margin-bottom: 1%;
+    margin-bottom: 0;
     padding: 20px;
     border-radius: 0.2rem;
     background: rgba(245, 245, 245, 0.774);
@@ -348,7 +370,7 @@ textarea {
     width: 80vw;
     position: fixed;
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 0.2rem;
     box-shadow: 0 0 25px 1px #212121;
   }
 
@@ -357,7 +379,7 @@ textarea {
     position: fixed;
     width: 100%;
     height: 100vh;
-    backdrop-filter: blur(30px);
+    backdrop-filter: blur(5px);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -543,10 +565,10 @@ textarea {
   }
   button[type="submit"] {
     margin-top: 5px;
-    width: 70%;
+    width: 80%;
     height: 35px;
     border: none;
-    border-radius: 20px;
+    border-radius: 0.2rem;
     cursor: pointer;
     font-size: 16px;
     font-weight: 600;
