--- a/server/views/product.hbs
+++ b/server/views/product.hbs
@@ -2,6 +2,7 @@
     <div class="item">
         <img src="/images/{{img}}" alt="{{title}}">
         <h2>{{title}}</h2>
+        <h3>{{price}} </h3>
     </div>
     <div class="description">
         <h4>Характеристики: </h4>
@@ -9,7 +10,7 @@
         <p>Год выпуска: {{date}}</p>
         <p>Жанры: {{genres}}</p>
         <h4>Описание:</h4>
-        <p>{{description}}</p>
+        <p class="description__content">{{description}}</p>
         <button class="{{_id}} yey buy__product">Добавить в корзину</button>
     </div>
 </div>
