--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -20,7 +20,9 @@
                 </h5>
             </div>
         </div>
-        <div class="card__main__Container"><div class="empty">Корзина пуста(</div></div>
+        <div class="card__main__Container">
+            <div class="empty">Корзина пуста(</div>
+        </div>
         <hr>
         <div class="checkout">
             <div class="total">
@@ -34,7 +36,7 @@
                     <input type="text" placeholder="Адрес" required />
                     <input type="email" placeholder="Электронная почта" required />
                     <button type="submit">Оформить заказ</button>
-                    <img class="clean" src="https://img.icons8.com/ios-glyphs/30/000000/trash--v1.png"/>
+                    <img class="clean" src="https://img.icons8.com/ios-glyphs/30/000000/trash--v1.png" />
                 </div>
             </div>
         </div>
@@ -45,9 +47,9 @@
     <nav>
         <ul class="menu">
             <li class="NavBtn"><a href="/">Главная</a></li>
-            <li class="NavBtn"><a href="">Новинки</a></li>
-            <li class="NavBtn"><a href="">Манга</a></li>
-            <li class="NavBtn"><a href="index2.html">Фигурки</a></li>
+            <li class="NavBtn"><a href="/catalogue/new">Новинки</a></li>
+            <li class="NavBtn"><a href="/catalogue/manga">Манга</a></li>
+            <li class="NavBtn"><a href="/catalogue/toy">Фигурки</a></li>
         </ul>
         <ul class="icons">
             <li><img class="sc" src="/images/shopping-cart.png" alt="shopping-cart"></li>
