--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="cards">
     {{#each product}}
     <div class="card">
-        <a href="/product/{{_id}}"><img class="product" src="/images/{{img}}" alt="{{title}}"></a>
+        <a href="/product/{{_id}}"><img class="product {{type}}" src="/images/{{img}}" alt="{{title}}"></a>
         <div class="caption">
             <h4><a href="/product/{{_id}}">{{title}}</a></h4>
             <p>
